# goats_production

./: .gitignore  .htmlhintrc  .pre-commit-config.yaml  .prettierignore  .readthedocs.yaml  .stylelintrc  CHANGES.md  Dockerfile  LICENSE  README.md  bpm_20240423_gnirs_gnirsn_11_full_1amp.fits  ci_environment.yaml  ci_environment.yml  environment.yaml  environment.yml  jest.config.js  noxfile.py  package.json  pyproject.toml  setup.cfg
.github/: dependabot.yaml  pull_request_template.md
.github/workflows/: build_conda_env.yml  build_release.yaml  build_release.yml  gh_pages.yml  python_ci.yaml  run_flake8.yaml  run_htmlhint.yaml  run_js_tests.yaml  run_ruff.yaml  run_ruff.yml  run_stylelint.yaml  run_tests.yaml
doc/changes/:  GOATS-235.change.md  GOATS-100.new.md  GOATS-103.other.md  GOATS-109.change.md  GOATS-110.new.md  GOATS-111.change.md  GOATS-112.change.md  GOATS-117.change.md  GOATS-117.new.md  GOATS-118.new.md  GOATS-119.change.md  GOATS-121.new.md  GOATS-122.new.md  GOATS-123.new.md  GOATS-126.bugfix.md  GOATS-129.change.md  GOATS-129.new.md  GOATS-151.new.md  GOATS-152.new.md  GOATS-154.bugfix.md  GOATS-155.perf.md  GOATS-156.change.md  GOATS-157.new.md  GOATS-158.new.md  GOATS-159.change.md  GOATS-160.change.md  GOATS-166.bugfix.md  GOATS-169.change.md  GOATS-170.change.md  GOATS-173.new.md  GOATS-174.new.md  GOATS-178.new.md  GOATS-179.new.md  GOATS-180.new.md  GOATS-187.new.md  GOATS-188.bugfix.md  GOATS-189.new.md  GOATS-191.new.md  GOATS-192.change.md  GOATS-194.new.md  (+218 more)
docs/changes/: 320.change.rst  321.doc.rst  322.other.rst  323.new.rst  325.doc.rst  328.change.rst  330.new.rst  331.new.rst  332.new.rst  334.doc.rst  336.change.rst  340.new.rst  341.change.rst  342.new.rst  343.new.rst  344.new.rst  348.new.rst  351.new.rst  352.new.rst  354.new.rst  358.new.rst  359.new.rst  360.doc.rst  362.new.rst  369.new.rst  370.new.rst  371.change.rst  372.change.rst  373.change.rst  374.new.rst  377.new.rst  378.new.rst  379.new.rst  380.new.rst  382.new.rst  388.new.rst  390.change.rst  395.new.rst  396.change.rst  397.new.md  (+75 more)
docs/gh_pages/: index.html
docs/gh_pages/conda/: channeldata.json  index.html  rss.xml
docs/readthedocs/: .readthedocs.yaml  requirements.txt
docs/readthedocs/source/: acknowledgment.rst  analysis.rst  conf.py  datalab.rst  dragons.rst  existing_obs.rst  functionalities.rst  goa_download.rst  help.rst  index.rst  installation.rst  overview.rst  targets.rst  team.rst  trigger_gemini.rst  visualization.rst
goats/: INSTALL.sh
goats/cli/: cli.py  modify_settings.py  plugins.py
goats/setup/: modify_settings.py
js_tests/: esquery.test.js  query.test.js  testConfig.js
src/goats/antares2goats/: Makefile  README.md
src/goats/browser_extension/: README.md  background.js  manifest.json  options.css  options.html  options.js
src/goats/cli/: cli.py  modify_settings.py  plugins.py
src/goats/goats_setup/: apps.py
src/goats/tom_goats/: antares.py  urls.py  views.py
src/goats_cli/: cli.py  config.py  exceptions.py  modify_manage.py  modify_settings.py  plugins.py  process_manager.py  utils.py
src/goats_setup/: apps.py
src/goats_tom/: antares.py  apps.py  astroquery_conf.py  astroquery_gemini.py  astroquery_urlhelper.py  forms.py  gemini.py  gemini_id.py  models.py  ocs_client.py  ocs_parser.py  routing.py  tasks.py  urls.py  utils.py  views.py
src/goats_tom/antares_client/: __init__.py  client.py
src/goats_tom/api_views/: __init__.py  antares2goats.py  astro_datalab.py  dataproducts.py  dragons_caldb.py  dragons_data.py  dragons_files.py  dragons_output_files.py  dragons_processed_files.py  dragons_recipes.py  dragons_runs.py  recipes_module.py  reduceddatum.py  run_processor.py  target.py
src/goats_tom/astro_data_lab/: __init__.py  client.py  config.py
src/goats_tom/astroquery/: __init__.py  conf.py  gemini.py  urlhelper.py
src/goats_tom/brokers/: __init__.py  antares.py
src/goats_tom/consumers/: __init__.py  download_state.py  dragons.py  dragons_consumer.py  notification_instance.py  notifications_consumer.py  updates.py  updates_consumer.py
src/goats_tom/context_processors/: __init__.py  goats_version_processor.py
src/goats_tom/facilities/: __init__.py  gemini.py  overrides.py
src/goats_tom/filters/: __init__.py  _q_expression_transformer.py  astrodata.py  reduceddatum.py
src/goats_tom/forms/: __init__.py  base_login.py  goa_query.py  program_key.py  token_login.py  user_key.py  username_password_login.py
src/goats_tom/harvesters/: __init__.py  tns.py
src/goats_tom/middleware/: __init__.py  dragons.py  tns.py
src/goats_tom/migrations/: 0001_initial.py  0002_alter_dragonsrun_output_directory.py  0002_dataproductmetadata.py  0002_dragonsreduce.py  0002_remove_baserecipe_is_default_and_more.py  0003_remove_dragonsfile_enabled.py
src/goats_tom/models/: __init__.py  base_recipe.py  data_product_metadata.py  dataproduct_metadata.py  download.py  dragons_file.py  dragons_file_metadata_model.py  dragons_primitive.py  dragons_recipe.py  dragons_reduce.py  dragons_run.py  dragons_run_data_product.py  goa_login.py  key.py  program_key.py  recipes_module.py  task_progress.py  user_key.py
src/goats_tom/ocs/: __init__.py  client.py  gemini_id.py  ocs_client.py  ocs_parser.py
src/goats_tom/processors/: __init__.py  run_data_processor.py  spectroscopy_processor.py
src/goats_tom/realtime/: __init__.py  download_state.py  dragons_progress.py  notification_instance.py
src/goats_tom/serializers/: __init__.py  antares2goats.py  astro_datalab.py  base_recipe.py  dataproduct.py  dataproduct_metadata.py  dragons_caldb.py  dragons_file.py  dragons_file_metadata_serializer.py  dragons_output_files.py  dragons_primitive.py  dragons_processed_files.py  dragons_recipe.py  dragons_reduce.py  dragons_run.py  (+4 more)
tests/: README.md  conftest.py
tests/data/: coordinates.xml  goats_setup_settings.py  odb.xml  sequence.xml  settings.py  tns-20250123.html
tests/goats_cli/: test_cli.py  test_config.py  test_exceptions.py  test_modify_settings.py  test_process_manager.py  test_utils.py
tests/unit/: README.md  conftest.py
(+485 files in other folders)
