[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "goats"
description = "Gemini Observation and Analysis of Targets System."
readme = "README.md"
authors = [
    { name = "Dan Avner", email = "dan.avner@noirlab.edu" },
    { name = "Monika Soraisam", email = "monika.soraisam@noirlab.edu" },
]
maintainers = [{ name = "GOATS Team", email = "goats@noirlab.edu" }]
classifiers = [
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
]
requires-python = ">=3.12"
dependencies = [
    "astropy>=6.0,<7",
    "astroquery==0.4.10",
    "tomtoolkit==2.24.5",
    "click>=8.2.1,<9",
    "django-cors-headers>=4.7.0,<5",
    "django-cryptography>=1.1,<2",
    "channels[daphne]>=4.0,<5",
    "channels_redis>=4.2.1,<5",
    "django>=4.2.2,<5",
    "djangorestframework>=3.16.0,<4",
    "dramatiq[redis, watch]>=1.18.0,<2",
    "django-dramatiq>=0.13.0",
    "dramatiq-abort>=1.2.1",
    "numpydoc>=1.8.0,<2",
    "marshmallow>=3.26.1,<4",
    "marshmallow-jsonapi>=0.24.0",
]
version = "25.3.0"

[project.urls]
Homepage = "https://github.com/gemini-hlsw/goats"
Documentation = "https://goats.readthedocs.io/en/latest/"
Repository = "https://github.com/gemini-hlsw/goats"
Issues = "https://github.com/gemini-hlsw/goats/issues"
Changelog = "https://github.com/gemini-hlsw/goats/blob/main/CHANGES.md"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-xdist",
    "pytest-cov",
    "pytest-django",
    "pytest-asyncio",
    "factory_boy",
    "pytest-remotedata",
    "pytest-mock",
    "ruff",
    "nox",
]
docs = ["sphinx", "sphinx-rtd-theme", "sphinxcontrib-video", "sphinx-autobuild"]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
goats = "goats_cli:cli"

[tool.setuptools.package-data]
"goats_tom.templates" = ["**/*.html"]
"goats_tom.static" = ["**/*.*"]
"goats_setup.templates" = ["**/*.tmpl"]

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
DJANGO_SETTINGS_MODULE = "goats_tom.tests.settings"
norecursedirs = "tests/unit/goats_tom/ocs"
asyncio_default_fixture_loop_scope = "session"
addopts = "-r A -v -n auto --cov=src --cov-report=term --cov=tests --cov-branch"

[tool.towncrier]
version = ""
package_dir = "goats"
filename = "CHANGES.md"
directory = "docs/changes"
start_string = "<!-- towncrier release notes start -->\n"
underlines = ["", "", ""]
title_format = "## GOATS {version} ({project_date})"
issue_format = "[[#{issue}](https://noirlab.atlassian.net/browse/{issue})]"
template = "docs/changes/template.jinja"
[[tool.towncrier.type]]
directory = "new"
name = "New Features"
showcontent = true
[[tool.towncrier.type]]
directory = "change"
name = "Changes"
showcontent = true
[[tool.towncrier.type]]
directory = "bugfix"
name = "Bug Fixes"
showcontent = true
[[tool.towncrier.type]]
directory = "perf"
name = "Enhancements"
showcontent = true
[[tool.towncrier.type]]
directory = "other"
name = "Other"
showcontent = true

[tool.ruff]
extend-exclude = [
    "src/goats_tom/migrations",
    "tests",
    "src/goats_tom/facilities/gemini.py",
    "src/goats_tom/tests/settings.py",
    "src/goats_tom/tests/urls.py",
    "docs",
]
target-version = "py310"

[tool.ruff.lint]
select = ['E', 'F', 'W', 'A', 'PLC', 'PLE', 'PLW', 'I']
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
